# test_task

./: .gitignore  login_page.py  pyproject.toml  report.html  test_addcontact.py  test_login.py  test_singup.py  text.py
Generate/: __init__.py  generate_contact.py  generate_unregistered_user.py
GenerationUser/: generate_contact.py  generate_unregistered_user.py
Generators/: generate_contact.py
api_clients/: api_clients_base.py
api_clients/contact_client/: contact_client.py
api_clients/contact_client/models/: base_response_model.py
api_clients/user_client/: user_client.py
generators/: generate_contact.py  user_generator.py
models/: create_contact_model.py  create_user_response_model.py
page_objects/: add_contact_page.py  base_page.py  contact_details_page.py  contact_list_page.py  edit_contact_page.py  element.py  elements.py  login_page.py  singup_page.py
page_objects/pages/: contact_list_page.py  contact_page.py  login_page.py  singup_page.py
tests/: singleton.py  test_addcontact.py  test_base.py  test_base_ui.py  test_contact.py  test_login.py  test_singup.py  test_ui.py  webdriver_singleton.py
tests/api_tests/: conftest.py  test_contact.py  test_login.py  test_singup.py
tests/ui_test/: test_singl.py  test_ui_contact_list_page.py  test_ui_login_page.py  test_ui_singup_page.py
tests/ui_tests/: conftest.py  test_singl.py  test_ui.py  test_ui_contact_list_page.py  test_ui_login_page.py  test_ui_singup_page.py
tests/ui_tests1/: test_ui_contact_list_page.py  test_ui_login_page.py  test_ui_singup_page.py
(+9 files in other folders)
